SKILIKS-2462. Fix horizontal scroll on homepage.

--- a/protected/assets/css/style.css
+++ b/protected/assets/css/style.css
@@ -4476,3 +4476,6 @@ ul.profile-menu li {
     display: none;
 }
 
+.action-controller-index-static-pages .container{
+    overflow: hidden;
+}
